my-apps/ai/ollama-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-webui
  namespace: ollama-webui
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        feature.node.kubernetes.io/pci-0300_10de.present: "true"
      tolerations:
        - key: "gpu"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: ollama-webui
          # renovate: datasource=docker depName=ghcr.io/open-webui/open-webui
          image: ghcr.io/open-webui/open-webui:latest@sha256:42fc9cb8be6746a95ad1b6f1b41b009621f8af05f99db2e9c7927a6ff92069a4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
              ephemeral-storage: "30Gi" 
            limits:
              memory: 8000Mi
              ephemeral-storage: "40Gi" 
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
          # Health probes disabled - backend model loading can take several minutes
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ollama-webui-storage-pvc
