my-apps/ai/ollama-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-webui
  namespace: ollama-webui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "ollama-webui.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30m
        backendRequest: 30m
      backendRefs:
        - group: ""
          kind: Service
          name: ollama-webui
          port: 8080
          weight: 1
